[package]
name = "host"
version.workspace = true
edition.workspace = true

[dependencies]
methods.workspace = true
common.workspace = true

chacha20.workspace = true
hex-literal.workspace = true
risc0-zkvm = { workspace = true,  default-features = true }
tracing-subscriber.workspace = true
serde.workspace = true
